src/tests/PropDrilling/valid/case#2/index.jsx
import React from 'react';
import ChildComponent from './ChildComponent'; // Certifique-se de importar o componente ChildComponent corretamente

const Component = ({ propDrilling }) => {
    return <h2 prop={{...propDrilling}} />;
};

export default Component;
