src/tests/PropDrilling/invalid/case#2/index.jsx
import React from 'react';
import ChildComponent from './ChildComponent'; // Certifique-se de importar o componente ChildComponent corretamente

const Component = ({ propDrilling }) => {
    return <ChildComponent prop={{...propDrilling}} />;
};

export default Component;
